--- a/DynamoApp/templates/DynamoApp/base_template.html
+++ b/DynamoApp/templates/DynamoApp/base_template.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_bootstrap5 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,8 +25,8 @@
            <div class="navbar-nav">
              <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-             <a class="nav-link" href="#">Menu 2</a>
-             <a class="nav-link" href="#">Menu 3</a>
+             <a class="nav-link" href="#">Single Origin Offerings</a>
+             <a class="nav-link" href="#">Our Makers</a>
              {% comment %} {% if user.is_authenticated %}
                <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
              {% else %}
