--- a/DynamoApp/templates/DynamoApp/base_template.html
+++ b/DynamoApp/templates/DynamoApp/base_template.html
@@ -16,7 +16,7 @@
 
      <!-- Navbar-->
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-       <img src="{% static 'images/dynamo_logo.jpg' %}">
+       <img src="{% static 'images/dynamo_logo.jpg' %}" width="70" height="70">
        <div class="container-fluid">
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
