--- a/DynamoApp/templates/DynamoApp/singleorigin_detail.html
+++ b/DynamoApp/templates/DynamoApp/singleorigin_detail.html
@@ -10,6 +10,6 @@
     <p><strong>Tasting Notes:</strong> {{ singleorigin.roast_profile }}</p>
     <p><strong>Available:</strong> {{ singleorigin.available }}</p>
     
-    
+    <a href="{% url 'single-origins' %}" class="btn btn-primary" role="button">Back to Offering List</a>
 
 {% endblock %}
