--- a/DynamoApp/templates/DynamoApp/base_template.html
+++ b/DynamoApp/templates/DynamoApp/base_template.html
@@ -9,13 +9,15 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Bootstrap demo</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   <style>
+   </style>
  </head>
 
  <body>
    <div class="container-fluid">
 
      <!-- Navbar-->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg navbar-light bg-warning-subtle">
        <img src="{% static 'images/dynamo_logo.jpg' %}" width="70" height="70">
        <div class="container-fluid">
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +28,7 @@
              <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
              <a class="nav-link" href="{% url 'single-origins' %}">Single Origin Offerings</a>
-             <a class="nav-link" href="#">Our Makers</a>
+             {% comment %} <a class="nav-link" href="#">Our Makers</a> INCLUDE THIS IN NEXT SPRINT {% endcomment %}
              {% comment %} {% if user.is_authenticated %}
                <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
              {% else %}
@@ -37,7 +39,7 @@
        </div>
      </nav>
 
-       <div class="col-sm-10">
+     <div class="container-fluid bg-info-subtle">
          <!-- add block content from html template -->
          {% block content %}
          {% endblock %}
