--- a/DynamoApp/templates/DynamoApp/base_template.html
+++ b/DynamoApp/templates/DynamoApp/base_template.html
@@ -29,11 +29,11 @@
              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
              <a class="nav-link" href="{% url 'single-origins' %}">Single Origin Offerings</a>
              {% comment %} <a class="nav-link" href="#">Our Makers</a> INCLUDE THIS IN NEXT SPRINT {% endcomment %}
-             {% comment %} {% if user.is_authenticated %}
+             {% if user.is_authenticated %}
                <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
              {% else %}
                <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
-             {% endif %} {% endcomment %}
+             {% endif %}
            </div>
          </div>
        </div>
