--- a/DynamoApp/templates/registration/register.html
+++ b/DynamoApp/templates/registration/register.html
@@ -1,12 +1,12 @@
-{% extends 'portfolio_app/base_template.html' %}
+{% extends 'DynamoApp/base_template.html' %}
 
 {% block content %}
-  <h2>UCCS Student Portfolio Registration</h2>
+  <h2>Customer Account Registration</h2>
 
-  <form method="post">
+  <form method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" name="Create User" />
+    <input type="submit" name="Create User">
   </form>
   {{form.errors}}
 {% endblock %}
