--- a/DynamoApp/templates/DynamoApp/subscribe.html
+++ b/DynamoApp/templates/DynamoApp/subscribe.html
@@ -1,7 +1,12 @@
 {% extends 'DynamoApp/base_template.html' %}
 
 {% block content %}
-
+<form action="" method="post">
 {% csrf_token %}
+<table>
+    {{ form.as_table }}
+</table>
+<input type="submit" value="Submit" />
+</form>
 
 {% endblock %}
