--- a/DynamoApp/templates/DynamoApp/singleorigin_list.html
+++ b/DynamoApp/templates/DynamoApp/singleorigin_list.html
@@ -5,7 +5,7 @@
 <div class="container-fluid text-center">
 <h1>Single Origin Offerings</h1>
 {% if request.user.is_staff %}
-<a href="{% url 'create-single-origin' %}" class="btn btn-primary" role="button">Add Offering</a>
+<a href="{% url 'create-single-origin' %}" class="btn btn-primary" role="button" name='add_offering'>Add Offering</a>
 {% endif %}
 </div>
 <div class="card-deck">
