--- a/DynamoApp/templates/DynamoApp/base_template.html
+++ b/DynamoApp/templates/DynamoApp/base_template.html
@@ -33,9 +33,10 @@
              {% comment %} <a class="nav-link" href="#">Our Makers</a> INCLUDE THIS IN NEXT SPRINT {% endcomment %}
              <a class="nav-link" href="{% url 'plans' %}">Available Plans</a>
              {% if user.is_authenticated %}
-               <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
+                <a class="nav-link" href="{% url 'subscriptions' %}">Current Subscriptions</a>
+                <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
              {% else %}
-               <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
              {% endif %}
            </div>
          </div>
